# aoc2025

./: .aocbench.yaml  .gitattributes  .gitignore
.docker/: Dockerfile
Day01/: CMakeLists.txt  CMakePresets.json  answers.txt  input.txt  main.cpp
Day02/: CMakeLists.txt  answers.txt  input.txt  main.cpp
Day03/: CMakeLists.txt  answers.txt  input.txt  main.cpp
Day05/: CMakeLists.txt  answers.txt  input.txt  main.cpp
Day06/: CMakeLists.txt  answers.txt  input.txt  main.cpp
Day07/: CMakeLists.txt  answers.txt  input.txt  main.cpp
Day08/: CMakeLists.txt  answers.txt  input.txt  main.cpp
